feat: NarrowButton 리뉴얼 (#704)
* feat: 스토리 예시 컬러 변경

* feat: NarrowButton 컴포넌트에 transparent 옵션 추가

* refactor: base color에서 가져오도록 변경

--- a/stories/components/general/button/NarrowButton.stories.mdx
+++ b/stories/components/general/button/NarrowButton.stories.mdx
@@ -28,6 +28,12 @@ import Icon from '@/components/elements/core/icon/Icon';
                 options: narrowButtonSizes,
             },
         },
+        transparent: {
+            description: "투명 타입 여부",
+            control: {
+                type: "boolean",
+            },
+        },
     }}
 />
 
@@ -36,7 +42,7 @@ export const Default = (args, { argTypes }) => ({
     props: Object.keys(argTypes),
     components: { NarrowButton },
     template:
-     `<NarrowButton :color="color" :size="size">{{label}}</NarrowButton>`,
+     `<NarrowButton :color="color" :size="size" :transparent="transparent">{{label}}</NarrowButton>`,
 });
 
 # NarrowButton
@@ -59,7 +65,7 @@ export const Default = (args, { argTypes }) => ({
                 <div>
                     <div style="display: flex">
                         <NarrowButton color="gray400">
-                            Small Gray500
+                            Small Gray400
                             <template v-slot:right-icon>
                                 <Icon name="IconTextArrowSmallLine" color="gray400" />
                             </template>
@@ -67,13 +73,13 @@ export const Default = (args, { argTypes }) => ({
                         <NarrowButton color="gray600">
                             Small Gray600
                             <template v-slot:right-icon>
-                                <Icon name="IconTextArrowSmallLine" color="gray500" />
+                                <Icon name="IconTextArrowSmallLine" color="gray400" />
                             </template>
                         </NarrowButton>
                     </div>
                     <div style="display: flex">
                         <NarrowButton color="gray400" size="medium">
-                            Medium Gray500
+                            Medium Gray400
                             <template v-slot:right-icon>
                                 <Icon name="IconTextArrowSmallLine" color="gray400" />
                             </template>
@@ -81,13 +87,13 @@ export const Default = (args, { argTypes }) => ({
                         <NarrowButton color="gray600" size="medium">
                             Medium Gray600
                             <template v-slot:right-icon>
-                                <Icon name="IconTextArrowSmallLine" color="gray500" />
+                                <Icon name="IconTextArrowSmallLine" color="gray400" />
                             </template>
                         </NarrowButton>
                     </div>
                     <div style="display: flex">
                         <NarrowButton color="gray400" size="large">
-                            Large Gray500
+                            Large Gray400
                             <template v-slot:right-icon>
                                 <Icon name="IconTextArrowSmallLine" color="gray400" />
                             </template>
@@ -95,7 +101,7 @@ export const Default = (args, { argTypes }) => ({
                         <NarrowButton color="gray600" size="large">
                             Large Gray600
                             <template v-slot:right-icon>
-                                <Icon name="IconTextArrowSmallLine" color="gray500" />
+                                <Icon name="IconTextArrowSmallLine" color="gray400" />
                             </template>
                         </NarrowButton>
                     </div>
@@ -159,16 +165,57 @@ export const Default = (args, { argTypes }) => ({
                     </NarrowButton>
                     <NarrowButton color="gray600">
                         <template v-slot:left-icon>
-                            <Icon name="IconPlusSmallLine" color="gray500" />
+                            <Icon name="IconPlusSmallLine" color="gray400" />
                         </template>
                         WithIcon
                         <template v-slot:right-icon>
-                            <Icon name="IconTextArrowSmallLine" color="gray500" />
+                            <Icon name="IconTextArrowSmallLine" color="gray400" />
                         </template>
                     </NarrowButton>
                 </div>
             </div>
         `,
+            components: { NarrowButton, Icon },
+        }}
+    </Story>
+</Canvas>
+
+### Transparent
+<Canvas>
+    <Story name="Transparent" height="100px">
+        {{
+            template: `
+                <div>
+                    <div style="background: #CF5310" class="p-8 mb-10">
+                        <div class="flex">
+                            <NarrowButton size="small" color="white" transparent class="mr-10">Small</NarrowButton>
+                            <NarrowButton size="small" color="white" transparent class="hover-test">Small</NarrowButton>
+                        </div>
+                        <div class="flex my-10">
+                            <NarrowButton size="medium" color="white" transparent class="mr-10">Medium</NarrowButton>
+                            <NarrowButton size="medium" color="white" transparent class="hover-test">Medium</NarrowButton>
+                        </div>
+                        <div class="flex">
+                            <NarrowButton size="large" color="white" transparent class="mr-10">Large</NarrowButton>
+                            <NarrowButton size="large" color="white" transparent class="hover-test">Large</NarrowButton>
+                        </div>
+                    </div>
+                    <div style="background: #040505" class="p-8">
+                        <div class="flex">
+                            <NarrowButton size="small" color="white" transparent class="mr-10">Small</NarrowButton>
+                            <NarrowButton size="small" color="white" transparent class="hover-test">Small</NarrowButton>
+                        </div>
+                        <div class="flex my-10">
+                            <NarrowButton size="medium" color="white" transparent class="mr-10">Medium</NarrowButton>
+                            <NarrowButton size="medium" color="white" transparent class="hover-test">Medium</NarrowButton>
+                        </div>
+                        <div class="flex">
+                            <NarrowButton size="large" color="white" transparent class="mr-10">Large</NarrowButton>
+                            <NarrowButton size="large" color="white" transparent class="hover-test">Large</NarrowButton>
+                        </div>
+                    </div>
+                </div>
+            `,
             components: { NarrowButton, Icon },
         }}
     </Story>
