--- a/stories/components/dataDisplay/Badge.stories.mdx
+++ b/stories/components/dataDisplay/Badge.stories.mdx
@@ -310,15 +310,14 @@ export const Default = (args, { argTypes }) => ({
   <Story name="Type" height="100px">
     {{
       template: `
-        <div>
-          <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
-            <Icon name="IconAlarmLargeLine" />
-              <Badge
+        <div style="background: #F4F5F7; border-radius: 25px; width: 50px; height: 50px; display: flex; align-items: center; justify-content: center;">
+            <Badge
                 text="1"
                 color="secondary"
                 type="inline"
-            />
-          </div>
+            >
+              <Icon name="IconAlarmLargeLine" />
+            </Badge>
         </div>
       `,
       components: { Badge, Icon },
