--- a/stories/components/dataDisplay/Badge.stories.mdx
+++ b/stories/components/dataDisplay/Badge.stories.mdx
@@ -62,9 +62,7 @@ export const Default = (args, { argTypes }) => ({
       :offset-y="offsetY"
       :type="type"
     >
-      <div>
         <Icon name="IconAlarmLargeLine" />
-      </div>
     </Badge>
   `,
 });
@@ -193,17 +191,17 @@ export const Default = (args, { argTypes }) => ({
   </Story>
 </Canvas>
 
-### Error
+### Secondary
 
 <Canvas>
-  <Story name="Error" height="100px">
+  <Story name="Secondary" height="100px">
     {{
       template: `
         <div>
           <div class="mt-20">
             <Badge
               text="1"
-              color="error"
+              color="secondary"
               size="small"
               :offset-x="12"
               :offset-y="28"
@@ -212,7 +210,7 @@ export const Default = (args, { argTypes }) => ({
             </Badge>
             <Badge
               text="99+"
-              color="error"
+              color="secondary"
               size="small"
               :offset-x="12"
               :offset-y="28"
@@ -222,7 +220,7 @@ export const Default = (args, { argTypes }) => ({
             </Badge>
             <Badge
               text="N"
-              color="error"
+              color="secondary"
               size="small"
               :offset-x="12"
               :offset-y="28"
@@ -233,7 +231,7 @@ export const Default = (args, { argTypes }) => ({
           <Divider class="my-10" />
           <Badge
             text="1"
-            color="error"
+            color="secondary"
             :offset-x="12"
             :offset-y="38"
           >
@@ -243,7 +241,7 @@ export const Default = (args, { argTypes }) => ({
           </Badge>
           <Badge
             text="99+"
-            color="error"
+            color="secondary"
             :offset-x="12"
             :offset-y="38"
             style="margin: 0 24px"
@@ -254,7 +252,7 @@ export const Default = (args, { argTypes }) => ({
           </Badge>
           <Badge
             text="N"
-            color="error"
+            color="secondary"
             :offset-x="12"
             :offset-y="38"
           >
@@ -265,7 +263,7 @@ export const Default = (args, { argTypes }) => ({
           <div class="mt-20">
             <Badge
               text="1"
-              color="error"
+              color="secondary"
               size="small"
               :offset-x="12"
               :offset-y="38"
@@ -276,7 +274,7 @@ export const Default = (args, { argTypes }) => ({
             </Badge>
             <Badge
               text="99+"
-              color="error"
+              color="secondary"
               size="small"
               :offset-x="12"
               :offset-y="38"
@@ -288,7 +286,7 @@ export const Default = (args, { argTypes }) => ({
             </Badge>
             <Badge
               text="N"
-              color="error"
+              color="secondary"
               size="small"
               :offset-x="12"
               :offset-y="38"
@@ -312,15 +310,14 @@ export const Default = (args, { argTypes }) => ({
   <Story name="Type" height="100px">
     {{
       template: `
-        <div>
-          <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
-            <Icon name="IconAlarmLargeLine" />
-              <Badge
+        <div style="background: #F4F5F7; border-radius: 25px; width: 50px; height: 50px; display: flex; align-items: center; justify-content: center;">
+            <Badge
                 text="1"
-                color="error"
+                color="secondary"
                 type="inline"
-            />
-          </div>
+            >
+              <Icon name="IconAlarmLargeLine" />
+            </Badge>
         </div>
       `,
       components: { Badge, Icon },
