feat: SearchInput 리뉴얼

--- a/stories/components/dataEntry/input/SearchInput.stories.mdx
+++ b/stories/components/dataEntry/input/SearchInput.stories.mdx
@@ -36,7 +36,7 @@ export const Default = (args, { argTypes }) => ({
     components: { SearchInput },
     computed: {
         transparentBackground() {
-            return { background: this.transparent ? 'black' : 'white' };
+            return { background: this.transparent ? '#CF5310' : 'white' };
         }
     },
     template: `
