IconButton에 transparent 옵션 추가 (#707)
* feat: IconButton에 transparent 추가

* fix: 스토리 제목 오류 수정

* refactor: base color에서 가져오도록 변경

* feat: hover-style mixin 추가 및 적용

mobile에서 hover style을 제거하기 위함.

* fix: pc에만 hover 적용

* rafactor: 이름 변경

hover, focus, active를 다루기 때문에 state로 변경

Co-authored-by: Donghoon <thdehdgns@gmail.com>

--- a/stories/components/general/button/IconButton.stories.mdx
+++ b/stories/components/general/button/IconButton.stories.mdx
@@ -33,6 +33,12 @@ import { IconNames } from "@/components/elements/core/icon/Icon";
         disabled: {
             description: "버튼의 disabled 상태",
         },
+        transparent: {
+            description: "투명타입 여부",
+            control: {
+                type: "boolean",
+            },
+        },
     }}
 />
 
@@ -45,12 +51,13 @@ export const Default = (args, { argTypes }) => ({
             :size="size"
             :color="color"
             :disabled="disabled"
+            :transparent="transparent"
         />`,
 });
 
-# Button
+# IconButton
 
-**Button** 컴포넌트의 문서입니다.
+**IconButton** 컴포넌트의 문서입니다.
 
 <Story name="Default" height="100px">
     {Default.bind({})}
@@ -69,6 +76,7 @@ export const Default = (args, { argTypes }) => ({
                         <div class="flex mb-10">
                             <IconButton :icon-name="item.iconName" :size="item.iconSize" class="mr-10"/>
                             <IconButton :icon-name="item.iconName" :size="item.iconSize" class="hover-test mr-10"/>
+                            <IconButton :icon-name="item.iconName" :size="item.iconSize" transparent class="hover-test mr-10"/>
                             <IconButton :icon-name="item.iconName" :size="item.iconSize" disabled class="mr-10"/>
                         </div>
                       </template>
