feat: 2xlarge 아이콘 추가

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -264,6 +264,16 @@ export const Default = (args, { argTypes }) => ({
                         <Typography type="body1" style="margin-bottom: 10px">2XLarge</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
                             <IconWrapper component="Icon" name="IconProfile2XLargeFill" />
+                            <IconWrapper component="Icon" name="IconJob2XLargeLine" />
+                            <IconWrapper component="Icon" name="IconChangeJob2XLargeLine" />
+                            <IconWrapper component="Icon" name="IconSupervisor2XLargeLine" />
+                            <IconWrapper component="Icon" name="IconCollege2XLargeLine" />
+                            <IconWrapper component="Icon" name="IconAnswer2XLargeLine" />
+                            <IconWrapper component="Icon" name="IconBoard2XLargeLine" />
+                        </div>
+                        <div style="display: flex; flex-wrap: wrap;">
+                            <IconWrapper component="Icon" name="IconCheckRound2XLargeLine" />
+                            <IconWrapper component="Icon" name="IconCheckRound2XLargeFill" />
                             <IconWrapper component="Icon" name="IconWriting2XLargeLine" />
                             <IconWrapper component="Icon" name="IconPhoto2XLargeLine" />
                         </div>
