feat: 4xlarge 아이콘 추가

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -282,6 +282,14 @@ export const Default = (args, { argTypes }) => ({
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">4XLarge</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
+                            <IconWrapper component="Icon" name="IconJob4XLargeLine" />
+                            <IconWrapper component="Icon" name="IconChangeJob4XLargeLine" />
+                            <IconWrapper component="Icon" name="IconSupervisor4XLargeLine" />
+                            <IconWrapper component="Icon" name="IconCollege4XLargeLine" />
+                            <IconWrapper component="Icon" name="IconAnswer4XLargeLine" />
+                            <IconWrapper component="Icon" name="IconBoard4XLargeLine" />
+                        </div>
+                        <div style="display: flex; flex-wrap: wrap;">
                             <IconWrapper component="Icon" name="IconStar4XLargeFill" />
                         </div>
                     </div>
