Feature/change icon (#708)
* feat: IconNames에 빠져 있는 부분 추가

* feat: 제거된 아이콘 예시 제거

* feat: icon-check-small-fill 제거

* feat: 2xlarge 아이콘 추가

* feat: 4xlarge 아이콘 추가

Co-authored-by: 유성실 <yooo1201@naver.com>

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -97,10 +97,6 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconLikeSmallFill"/>
                             <IconWrapper component="Icon" name="IconThreeDotSmallFill" />
                         </div>
-                      <div style="display: flex; flex-wrap: wrap;">
-                            <!-- 제외 -->
-                            <IconWrapper component="Icon" name="IconCheckSmallFill" />
-                        </div>
                     </div>
                     <!--medium-->
                     <div>
@@ -259,11 +255,8 @@ export const Default = (args, { argTypes }) => ({
                           <IconWrapper component="Icon" name="IconSupportXLargeLine" />
                           <IconWrapper component="Icon" name="IconStarXLargeLine" />
                           <IconWrapper component="Icon" name="IconStarXLargeFill" />
-                      </div>
-                      <div style="display: flex; flex-wrap: wrap;">
-                          <IconWrapper component="Icon" name="IconQuestionXLargeLine" />
-                        <IconWrapper component="Icon" name="IconBookmarkXLargeFill" />
-                        <IconWrapper component="Icon" name="IconBookmarkXLargeLine" />
+                          <IconWrapper component="Icon" name="IconBookmarkXLargeFill" />
+                          <IconWrapper component="Icon" name="IconBookmarkXLargeLine" />
                       </div>
                     </div>
                     <!--2x-large-->
@@ -271,6 +264,16 @@ export const Default = (args, { argTypes }) => ({
                         <Typography type="body1" style="margin-bottom: 10px">2XLarge</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
                             <IconWrapper component="Icon" name="IconProfile2XLargeFill" />
+                            <IconWrapper component="Icon" name="IconJob2XLargeLine" />
+                            <IconWrapper component="Icon" name="IconChangeJob2XLargeLine" />
+                            <IconWrapper component="Icon" name="IconSupervisor2XLargeLine" />
+                            <IconWrapper component="Icon" name="IconCollege2XLargeLine" />
+                            <IconWrapper component="Icon" name="IconAnswer2XLargeLine" />
+                            <IconWrapper component="Icon" name="IconBoard2XLargeLine" />
+                        </div>
+                        <div style="display: flex; flex-wrap: wrap;">
+                            <IconWrapper component="Icon" name="IconCheckRound2XLargeLine" />
+                            <IconWrapper component="Icon" name="IconCheckRound2XLargeFill" />
                             <IconWrapper component="Icon" name="IconWriting2XLargeLine" />
                             <IconWrapper component="Icon" name="IconPhoto2XLargeLine" />
                         </div>
@@ -278,6 +281,14 @@ export const Default = (args, { argTypes }) => ({
                     <!--4x-large-->
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">4XLarge</Typography>
+                        <div style="display: flex; flex-wrap: wrap;">
+                            <IconWrapper component="Icon" name="IconJob4XLargeLine" />
+                            <IconWrapper component="Icon" name="IconChangeJob4XLargeLine" />
+                            <IconWrapper component="Icon" name="IconSupervisor4XLargeLine" />
+                            <IconWrapper component="Icon" name="IconCollege4XLargeLine" />
+                            <IconWrapper component="Icon" name="IconAnswer4XLargeLine" />
+                            <IconWrapper component="Icon" name="IconBoard4XLargeLine" />
+                        </div>
                         <div style="display: flex; flex-wrap: wrap;">
                             <IconWrapper component="Icon" name="IconStar4XLargeFill" />
                         </div>
