--- a/stories/components/dataDisplay/card/EduCard.stories.mdx
+++ b/stories/components/dataDisplay/card/EduCard.stories.mdx
@@ -5,6 +5,7 @@ import Row from '@/components/layout/Row';
 import StyleCol from '@/components/layout/StyleCol';
 import ChipGroup from '@/components/components/dataDisplay/chips/ChipGroup';
 import Chip from '@/components/components/dataDisplay/chips/Chip';
+import Icon from '@/components/elements/core/icon/Icon';
 
 <Meta
 	title="Data Display/Card/EduCard"
@@ -173,7 +174,6 @@ export const Default = (args, { argTypes }) => ({
 ## Stories
 
 ### All
-
 <Canvas>
 	<Story name="All">
 		{{
@@ -183,50 +183,53 @@ export const Default = (args, { argTypes }) => ({
 				};
 			},
 			template: `
-                <Grid>
-                    <Row>
-                        <StyleCol :col-lg="4">
-                            <EduCard
-                                :background-image="exampleBackgroundImage"
-                                category="category"
-                                caption-left="captionLeft"
-                                caption-right="captionRight"
-                                image-height="100px"
-                                additional-subtitle="2차 앵콜"
-                            >
-                               <template v-slot:chip>
-                                  <ChipGroup>
-                                    <Chip size="medium">복습 VOD</Chip>
-                                  </ChipGroup>
-                               </template>
-                               <template v-slot:title>Title</template>
-                            </EduCard>
-                        </StyleCol>
-                        <StyleCol :col-lg="4">
-                            <EduCard
-                                :background-image="exampleBackgroundImage"
-                                category="생산기술"
-                                caption-left="3개의 스케줄"
-                                caption-right="1월 20일까지"
-                            >
-                               <template v-slot:title>대기업 현직자와 알기 쉽게 이해하는 생산기술 생산관리의 핵심 알아보고 보고서 작성과 직무 체험하기</template>
-                            </EduCard>
-                        </StyleCol>
-                        <StyleCol :col-lg="4">
-                            <EduCard
-                                :background-image="exampleBackgroundImage"
-                                category="category"
-                                title="title"
-                                caption-left="captionLeft"
-                                caption-right="captionRight"
-                            >
-                               <template v-slot:title>Title</template>
-                            </EduCard>
-                        </StyleCol>
-                    </Row>
-                </Grid>
+                <div>
+                    <Grid>
+                        <Row>
+                            <StyleCol :col-lg="4">
+                                <EduCard
+                                    :background-image="exampleBackgroundImage"
+                                    category="생산기술"
+                                    caption-left="3개의 스케줄"
+                                    caption-right="1월 20일까지"
+                                    additional-subtitle="2차 앵콜"
+                                >
+                                   <template v-slot:chip>
+                                      <ChipGroup>
+                                        <Chip size="medium">복습 VOD</Chip>
+                                      </ChipGroup>
+                                   </template>
+                                   <template v-slot:title>대기업 현직자와 알기 쉽게 이해하는 생산기술 생산관리의 핵심 알아보고 보고서 작성과 직무 체험하기</template>
+                                </EduCard>
+                            </StyleCol>
+                            <StyleCol :col-lg="4">
+                                <EduCard
+                                    :background-image="exampleBackgroundImage"
+                                    category="생산기술"
+                                    caption-left="3개의 스케줄"
+                                    caption-right="1월 20일까지"
+                                >
+                                   <template v-slot:title>대기업 현직자와 알기 쉽게 이해하는 생산기술 생산관리의 핵심 알아보고 보고서 작성과 직무 체험하기</template>
+                                </EduCard>
+                            </StyleCol>
+                            <StyleCol :col-lg="4">
+                                <EduCard
+                                    :background-image="exampleBackgroundImage"
+                                    category="생산기술"
+                                    caption-left="3개의 스케줄"
+                                    caption-right="1월 20일까지"
+                                >
+                                    <template v-slot:additionalButton>
+                                        <Icon name="IconBookmarkLargeLine" color="white" />
+                                    </template>
+                                   <template v-slot:title>대기업 현직자와 알기 쉽게 이해하는 생산기술 생산관리의 핵심 알아보고 보고서 작성과 직무 체험하기</template>
+                                </EduCard>
+                            </StyleCol>
+                        </Row>
+                    </Grid>
+                </div>
             `,
-			components: { Grid, Row, StyleCol, EduCard, ChipGroup, Chip },
+			components: { Grid, Row, StyleCol, EduCard, ChipGroup, Chip, Icon },
 		}}
 	</Story>
 </Canvas>
